<resources>
    <string name="app_name">KoKus</string>
    <string name="result">Result</string>
    <string name="congratulations">Selamat!</string>
    <string name="mahboob">Kelompok8</string>
    <string name="trophy_image">Trophy Image</string>
    <string name="your_score_is_9_out_0f_10">Skor anda adalah 9 dari 10</string>
    <string name="quiz_app">KoKus!</string>
    <string name="welcome">Selamat Datang</string>
    <string name="please_enter_your_name">Silahkan masukkan nama anda</string>
    <string name="start">MULAI</string>
    <string name="finish">SELESAI</string>
    <string name="name">Nama</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="_0_9">0/9</string>
    <string name="apple">Apple</string>
    <string name="option_1">option-1</string>
    <string name="option_2">option-2</string>
    <string name="option_3">option-3</string>
    <string name="option_4">option-4</string>
    <string name="submit">Submit</string>
</resources>