<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bg_result_activity"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ResultActivity3">

    <TextView
        android:id="@+id/tv_result_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/trophy_image"
        android:src="@drawable/trophy"
        app:layout_constraintEnd_toEndOf="@id/tv_result_heading"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/tv_result_heading"
        app:layout_constraintTop_toBottomOf="@id/tv_result_heading" />

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_trophy" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/mahboob"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_result_heading"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/tv_result_heading"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/your_score_is_9_out_0f_10"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_result_heading"
        app:layout_constraintStart_toStartOf="@id/tv_result_heading"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/biru"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/tv_result_heading"
        app:layout_constraintStart_toStartOf="@id/tv_result_heading"
        app:layout_constraintTop_toBottomOf="@id/tv_score" />


</androidx.constraintlayout.widget.ConstraintLayout>